# CatEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPP.HINT  CatEngine.docx  Doxyfile  README.md  Shaders.cmake
.run/: CatEngine.run.xml
CatEngine/: Defines.h  Globals.hpp  main.cpp
CatEngine/Cat/: CatApp.cpp  CatApp.hpp  CatBuffer.cpp  CatBuffer.hpp  CatCamera.hpp  CatDescriptors.cpp  CatDevice.cpp  CatDevice.hpp  CatFrameInfo.hpp  CatImGui.cpp  CatImGui.hpp  CatImgui.cpp  CatImgui.hpp  CatInput.cpp  CatInput.hpp  CatModel.cpp  CatModel.hpp  CatObject.cpp  CatObject.hpp  CatPipeline.cpp  CatPipeline.hpp  CatRenderSystem.cpp  CatRenderSystem.hpp  CatRenderer.cpp  CatRenderer.hpp  CatSwapChain.cpp  CatSwapChain.hpp  CatUtils.hpp  CatWindow.cpp  CatWindow.hpp
CatEngine/Cat/Controller/: CatCamera.cpp  CatCamera.hpp  CatInput.cpp  CatInput.hpp
CatEngine/Cat/Level/: CatChunk.cpp  CatChunk.hpp  CatLevel.cpp  CatLevel.hpp
CatEngine/Cat/Objects/: CatAssetLoader.cpp  CatAssetLoader.hpp  CatCamera.cpp  CatCamera.hpp  CatInput.cpp  CatInput.hpp  CatLight.cpp  CatLight.hpp  CatModel.cpp  CatModel.hpp  CatObject.cpp  CatObject.hpp  CatObjectType.hpp  CatVolume.cpp  CatVolume.hpp
CatEngine/Cat/RenderSystems/: CatGridRenderSystem.cpp  CatGridRenderSystem.hpp  CatPointLightRenderSystem.cpp  CatPointLightRenderSystem.hpp  CatSimpleRenderSystem.cpp  CatSimpleRenderSystem.hpp  CatTerrainRenderSystem.cpp  CatTerrainRenderSystem.hpp  CatWireframeRenderSystem.cpp  CatWireframeRenderSystem.hpp
CatEngine/Cat/Rendering/: CatBuffer.hpp  CatDescriptors.hpp  CatDevice.cpp  CatDevice.hpp  CatFrustum.hpp  CatPipeline.cpp  CatPipeline.hpp  CatRenderer.cpp  CatRenderer.hpp  CatSwapChain.cpp  CatSwapChain.hpp
CatEngine/Cat/Terrain/: CatTerrain.cpp  CatTerrain.hpp
CatEngine/Cat/Texture/: CatTexture.cpp  CatTexture.hpp
CatEngine/Cat/Utils/: .clang-format  CatUtils.hpp
CatEngine/Cat/VulkanRHI/: CatBuffer.cpp  CatBuffer.hpp  CatDescriptors.cpp  CatDescriptors.hpp  CatDevice.cpp  CatDevice.hpp  CatPipeline.cpp  CatPipeline.hpp  CatRenderer.cpp  CatRenderer.hpp  CatSwapChain.cpp  CatSwapChain.hpp
CatEngine/Vulkan/: VulkanRendering.cpp
CatEngine/assets/levels/: asd.json  sponza.json  wasd.json  wasd2.json  wasd3.json  wasd5.json  wasd6.json
CatEngine/assets/shaders/: grid.frag.spv  grid.vert.spv  (+7 more)
CatEngine/shaders/: grid.frag  grid.vert  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert  simple_shader_2.frag  simple_shader_2.vert  test.frag  test.vert  wireframe.vert
Libraries/: CMakeLists.txt
(+10 files in other folders)
